@@ -1,3 +1,8 @@
+*repsep_utils-0.2 (30 May 2020)
+
+  30 May 2020;  <chymera@gentoo.org> +repsep_utils-0.2.ebuild:
+  dev-python/repsep_utils: version bump 0.2
+
 *repsep_utils-0.1.1 (10 Apr 2020)
 
   10 Apr 2020;  <chymera@gentoo.org> +repsep_utils-0.1.1.ebuild,
